Style info section and fix item spacing under heading

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 50px 0;
+    padding: 50px 0;
     gap: 100px;
 }
 
@@ -129,11 +129,35 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .content .place-holder {
     width: 75px;
     height: 75px;
+}
+
+/* Info Section Styling */
+
+.info h3 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.content .place-holder {
+    width: 150px;
+    height: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 8px;
+}
+
+.container .content p {
+    font-size: 18px;
+    font-weight: lighter;
+    color: #1F2937;
+    text-align: center;
 }
 
 /* Quote Section Structure */
